# substrate-template

./: .gitignore  README.md
node/: Cargo.toml
node/src/: benchmarking.rs  mock.rs
parachain/: Cargo.toml
parachain/src/: benchmarking.rs  mock.rs  tests.rs
