[package]
authors     = ['{{authors}}']
description = '{{description}}'
edition     = '2018'
homepage    = 'https://substrate.dev'
license     = '{{}}'
name        = 'pallet-{{}}'
publish     = false
repository  = 'https://github.com/paritytech/substrate'
version     = '1.0.0'
readme      = 'README.md'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dev-dependencies.serde]
version = '1.0.126'

[dev-dependencies.sp-core]
default-features = false
git              = 'https://github.com/paritytech/substrate.git'
tag              = '{{tag}}'
version          = '{{version}}'


[dev-dependencies.sp-io]
default-features = false
git              = 'https://github.com/paritytech/substrate.git'
tag              = '{{tag}}'
version          = '{{version}}'


[dev-dependencies.sp-runtime]
default-features = false
git              = 'https://github.com/paritytech/substrate.git'
tag              = '{{tag}}'
version          = '{{version}}'

[dependencies.codec]
default-features = false
features         = ['derive']
package          = 'parity-scale-codec'
version          = '2.0.0'


[dependencies.frame-benchmarking]
default-features = false
git              = 'https://github.com/paritytech/substrate.git'
optional         = true
tag              = '{{tag}}'
version          = '{{version}}'


[dependencies.frame-support]
default-features = false
git              = 'https://github.com/paritytech/substrate.git'
tag              = '{{tag}}'
version          = '{{version}}'


[dependencies.frame-system]
default-features = false
git              = 'https://github.com/paritytech/substrate.git'
tag              = '{{tag}}'
version          = '{{version}}'


[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']