[package]
name        = 'pallet-{{name}}'
authors     = ['{{authors}}']
description = '{{description}}'
version     = '1.0.0'
license     = '{{license}}'
homepage    = 'https://substrate.dev'
repository  = 'https://github.com/paritytech/substrate/'
edition     = '2018'


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# third-party dependencies
codec = { package = 'parity-scale-codec', version = '2.0.0', features = ['derive'], default-features = false }

# frame dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = '{{branch}}', default-features = false, optional = true }
frame-support      = { git = 'https://github.com/paritytech/substrate', branch = '{{branch}}', default-features = false }
frame-system       = { git = 'https://github.com/paritytech/substrate', branch = '{{branch}}', default-features = false }


[dev-dependencies]
serde      = { version = "1.0.101" }
sp-core    = { git = 'https://github.com/paritytech/substrate', branch = '{{branch}}', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = '{{branch}}', default-features = false }
sp-io      = { git = 'https://github.com/paritytech/substrate', branch = '{{branch}}', default-features = false }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]
